--- a/test.html
+++ b/test.html
@@ -558,7 +558,10 @@ python -m venv .venv
     <footer>
         <p>© 2025 Test Grader. All rights reserved.</p>
         <p>Download the latest version for free and improve your grading experience today!</p>
+        <p>patters</p>
+        <button>Github</button>
     </footer>
 </body>
+
 
 </html>
